--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\CaveGenerator.cs" />
+    <Compile Include="Assets\Falling.cs" />
     <Compile Include="Assets\PlayerControl.cs" />
     <Compile Include="Assets\paralaxContainer.cs" />
     <Reference Include="Unity.Timeline.Editor">
