--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,14 @@ obj/Debug/Assembly-CSharp.csprojAssemblyReference.cache
 
 obj/Debug/Assembly-CSharp.csprojAssemblyReference.cache
 *.cache
+
+###
+# Idea files
+###
+**/.idea
+*.iml
+
+###
+# Visual Studio Code
+###
+**/.vscode
