beter gen and paralax

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\EnemyAI.cs" />
     <Compile Include="Assets\Falling.cs" />
     <Compile Include="Assets\MenuActions.cs" />
+    <Compile Include="Assets\Paralax.cs" />
     <Compile Include="Assets\ParticleSystemCleanup.cs" />
     <Compile Include="Assets\PlayerControl.cs" />
     <Compile Include="Assets\paralaxContainer.cs" />
